<resources>
    <string name="app_name">AgeInMinutes</string>
    <string name="age" >age</string>
    <string name="age_in_minutes">age in minutes</string>
    <string name="selected_date" >selected date</string>
    <string name="select_date" >select date</string>
    <string name="in_minutes" >in minutes</string>
    <string name="calculate_your" >calculate your</string>
    <string name="empty" />
</resources>